examples/bad/wrong-return-type.elina
fn f(): string {
  return true;
}

fn main(): void {
}